--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="tire1 tire">
                
                <div class="about">
-                <h3>Meet To Futhur</h3>
+                <h3>Meet To Future</h3>
                <p>In this event we will learn a lot about funtions of tesla. 
                 As we know tesla ifs futhur so let move towards a bright futhur.
                 We all know how tesla and automotive vehicles are evolving. so we disided to 
